--- a/academics.html
+++ b/academics.html
@@ -87,11 +87,12 @@
     </div>
     <nav>
         <a href="#about">About</a>
-        <a href="#programs">Programs</a>
-        <a href="#activities">Activities</a>
+        <a href="program.html">Programs</a>
+        <a href="activities.html">Activities</a>
         <a href="#testimonials">Testimonials</a>
         <a href="#contact">Contact</a>
     </nav>
+    <li><a href="academyweb2.html">Home</a></li>
     <div class="container">
         <div class="carousel">
             <img src="academic 1.webp" alt="School Image 1">
