--- a/program.html
+++ b/program.html
@@ -163,7 +163,7 @@
         </nav>
        
     </header>
-    <li><a href="academyweb2.html">Home</a></li>
+    <li><a href="academics.html">Home</a></li>
     <div class="container" id="programs">
         <h2>Programs Offered</h2>
         <ul class="programs">
