--- a/academics.html
+++ b/academics.html
@@ -88,6 +88,7 @@
     <nav>
         <a href="#about">About</a>
         <a href="program.html">Programs</a>
+        <a href="#activities">Activities</a>
         <a href="#testimonials">Testimonials</a>
         <a href="#contact">Contact</a>
     </nav>
