--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Great Value Academy School</title>
     <link rel="stylesheet"  type = "text/css "href="contact.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
     <header>
@@ -14,12 +15,19 @@
               <br>
               <br>
               <br>
-            <li><a href="universityweb.html">Call:+254791848737/+254102606710</a></li>
-            <li><a href="email.html">Email :info@gvc.ac.ke</a></li>
             <li><a href="staff portal.html">Staff Portal</a></li>
             <li><a href="student portal.html">Student Portal</a></li>
             <li><a href="tenders.html">Tenders</a></li>
-            <li><a href="reach us on.html">Reach Us on : Facebook Twitter  LinkedIn Whasapp Instagram</a></li>
+            <li><a href="reach us on.html">Reach Us on : </a></li>
+            <a href="https://wa.me/+254791848737" style="background-colors:" class="social-icon"><i class="fab fa-whatsapp"></i></a>
+            <a href="mailto:info@gva.ac.ke/felisila2015@gmail.com" class="social-icon"><i class="fas fa-envelope"></i></a>
+            <a href="tel:+254791848737" class="social-icon"><i class="fas fa-phone"></i></a>
+            <a href="https://www.tiktok.com/@knatalie24?_t=8nfQXS2m8hS&_r=1" class="social-icon"><i class="fab fa-tiktok"></i></a>
+            <a href="https://www.youtube.com" class="social-icon"><i class="fab fa-youtube"></i></a>
+            <a href="https://www.instagram.com" class="social-icon"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.twitter.com" class="social-icon"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.facebook.com" class="social-icon"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.linkedin.coms" class="social-icon"><i class="fab fa-linkedin"></i></a>
             </div>
         </ul>
       </header>
