--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
               <br>
               <li><a href="staff.html">Staff Portal</a></li>
               <li><a href="student.html">Student Portal</a></li>
-              <li><a href="parent.html">Parents Portal</a></li>
+              <li><a href="parent2.html">Parents Portal</a></li>
               <li><a href="tenders.html">Tenders</a></li>
               <li><a href="teacher2.html">Teachers Portal</a></li>
               <li><a href=#Reach Us On#>Reach Us On : </a></li>
