--- a/academyweb.html
+++ b/academyweb.html
@@ -17,8 +17,8 @@
               <br>
               <li><a href="staff.html">Staff Portal</a></li>
               <li><a href="student.html">Student Portal</a></li>
-              <li><a href="parent.html">Parents Portal</a></li>
-              <li><a href="tenders.html">Tenders</a></li>
+              <li><a href="parent2.html">Parents Portal</a></li>
+              <li><a href="tenders2.html">Tenders</a></li>
               <li><a href="teacher2.html">Teachers Portal</a></li>
               <li><a href=#Reach Us On#>Reach Us On : </a></li>
             <a href="https://wa.me/+254791848737" style="background-colors:" class="social-icon"><i class="fab fa-whatsapp"></i></a>
